--- a/majorleaguestadiums.ui
+++ b/majorleaguestadiums.ui
@@ -49,6 +49,16 @@ padding:5px;
     <string>Visit</string>
    </property>
   </widget>
+  <widget class="QListWidget" name="listWidget">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>70</y>
+     <width>381</width>
+     <height>171</height>
+    </rect>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
