--- a/majorleaguestadiums.ui
+++ b/majorleaguestadiums.ui
@@ -49,14 +49,40 @@ padding:5px;
     <string>Visit</string>
    </property>
   </widget>
-  <widget class="QListWidget" name="listWidget">
+  <widget class="QComboBox" name="comboBox">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>70</y>
-     <width>381</width>
-     <height>171</height>
+     <x>40</x>
+     <y>120</y>
+     <width>331</width>
+     <height>31</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>60</y>
+     <width>321</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string> Starting at Angel Stadium, where would you like to go? We'll find </string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>90</y>
+     <width>301</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>you the shortest trip, don't you worry!</string>
    </property>
   </widget>
  </widget>
