--- a/stadiummodify.ui
+++ b/stadiummodify.ui
@@ -125,7 +125,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Add</string>
+    <string>Save</string>
    </property>
   </widget>
   <widget class="QLabel" name="error3">
