--- a/addnewteam.ui
+++ b/addnewteam.ui
@@ -118,7 +118,7 @@
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>390</y>
+     <y>380</y>
      <width>81</width>
      <height>16</height>
     </rect>
@@ -131,7 +131,7 @@
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>420</y>
+     <y>410</y>
      <width>81</width>
      <height>16</height>
     </rect>
@@ -144,7 +144,7 @@
    <property name="geometry">
     <rect>
      <x>168</x>
-     <y>391</y>
+     <y>380</y>
      <width>140</width>
      <height>21</height>
     </rect>
@@ -164,7 +164,7 @@
    <property name="geometry">
     <rect>
      <x>170</x>
-     <y>420</y>
+     <y>410</y>
      <width>140</width>
      <height>21</height>
     </rect>
@@ -183,10 +183,10 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>460</y>
-     <width>75</width>
-     <height>23</height>
+     <x>120</x>
+     <y>470</y>
+     <width>111</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
@@ -326,6 +326,39 @@
      <height>31</height>
     </rect>
    </property>
+  </widget>
+  <widget class="QLabel" name="label_12">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>440</y>
+     <width>81</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Astroturf</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="astroturf">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>440</y>
+     <width>140</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <item>
+    <property name="text">
+     <string>Yes</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>No</string>
+    </property>
+   </item>
   </widget>
  </widget>
  <resources/>
