--- a/total.ui
+++ b/total.ui
@@ -30,7 +30,7 @@ border: 1px solid #000;
     </rect>
    </property>
    <property name="text">
-    <string>Total Products</string>
+    <string>Purchases</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
@@ -40,13 +40,23 @@ border: 1px solid #000;
    <property name="geometry">
     <rect>
      <x>140</x>
-     <y>210</y>
+     <y>260</y>
      <width>141</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
     <string>Checkout</string>
+   </property>
+  </widget>
+  <widget class="QTableWidget" name="tableWidget">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>60</y>
+     <width>381</width>
+     <height>191</height>
+    </rect>
    </property>
   </widget>
  </widget>
