--- a/displaytrip.ui
+++ b/displaytrip.ui
@@ -40,7 +40,7 @@ padding:10px;
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>250</y>
+     <y>260</y>
      <width>191</width>
      <height>41</height>
     </rect>
@@ -53,13 +53,55 @@ padding:10px;
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>200</y>
+     <y>210</y>
      <width>191</width>
      <height>41</height>
     </rect>
    </property>
    <property name="text">
     <string>Purchase Souvenirs</string>
+   </property>
+  </widget>
+  <widget class="QTableWidget" name="tableWidget">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>60</y>
+     <width>361</width>
+     <height>121</height>
+    </rect>
+   </property>
+   <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+    <bool>false</bool>
+   </attribute>
+   <attribute name="verticalHeaderShowSortIndicator" stdset="0">
+    <bool>false</bool>
+   </attribute>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>240</x>
+     <y>190</y>
+     <width>81</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Total Weight</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="weight">
+   <property name="geometry">
+    <rect>
+     <x>330</x>
+     <y>190</y>
+     <width>47</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
