--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -31,33 +31,33 @@ border: 1px solid #333;
       <x>10</x>
       <y>50</y>
       <width>381</width>
-      <height>171</height>
+      <height>181</height>
      </rect>
     </property>
     <widget class="QPushButton" name="pushButton">
      <property name="geometry">
       <rect>
-       <x>40</x>
-       <y>20</y>
+       <x>50</x>
+       <y>110</y>
        <width>301</width>
        <height>51</height>
       </rect>
      </property>
      <property name="text">
-      <string>Visit Major League Stadiums</string>
+      <string>Visit Major League Stadiums / Dream Vacation</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_2">
+    <widget class="QPushButton" name="pushButton_5">
      <property name="geometry">
       <rect>
-       <x>40</x>
-       <y>90</y>
+       <x>50</x>
+       <y>30</y>
        <width>301</width>
        <height>51</height>
       </rect>
      </property>
      <property name="text">
-      <string>Plan Dream Vacation</string>
+      <string>View All Stadiums</string>
      </property>
     </widget>
    </widget>
@@ -85,6 +85,19 @@ border: 1px solid #333;
     </property>
     <property name="text">
      <string>Admin</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_6">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>250</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>MST</string>
     </property>
    </widget>
   </widget>
