--- a/majorleaguestadiums.ui
+++ b/majorleaguestadiums.ui
@@ -85,6 +85,16 @@ padding:5px;
     <string>you the shortest trip, don't you worry!</string>
    </property>
   </widget>
+  <widget class="QComboBox" name="comboBox_2">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>170</y>
+     <width>331</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
