--- a/dreamvacation.ui
+++ b/dreamvacation.ui
@@ -42,7 +42,7 @@ padding:5px;
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>100</x>
      <y>250</y>
      <width>181</width>
      <height>41</height>
@@ -62,13 +62,13 @@ padding:5px;
     </rect>
    </property>
   </widget>
-  <widget class="QTableWidget" name="tableWidget">
+  <widget class="QListWidget" name="listWidget">
    <property name="geometry">
     <rect>
-     <x>80</x>
+     <x>40</x>
      <y>120</y>
-     <width>251</width>
-     <height>111</height>
+     <width>301</width>
+     <height>121</height>
     </rect>
    </property>
   </widget>
