--- a/viewsinglestadium.ui
+++ b/viewsinglestadium.ui
@@ -49,6 +49,19 @@
     <string>Back to List</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="pushButton_2">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>170</y>
+     <width>241</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Purchase Souvenirs</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
